Add destination locations to freely_available_driver queries [backend][api]
